gap fix

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -151,7 +151,7 @@ footer {
     display: grid;
     grid-template-columns: repeat(3, 1fr); 
     grid-template-rows: 20px;
-    grid-gap: 30px;
+    grid-gap: 40px;
     align-items: center;
     margin: 60px 0 0 0;
    
